# diff-tool-gpui

./: AGENTS.md  Cargo.toml  README.md
plans/: side-by-side-diff.md
src/: diff.rs  git.rs  main.rs  viewer.rs
